<resources>
    <string name="app_name">DDANZI</string>
    <string name="company_name">오렌지컴퍼니</string>
    <string name="to_string">%s</string>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="token_expire_error_msg">로그인 상태를 확인해주세요!</string>
    <string name="error_msg">오류가 발생했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="kakao_connection_error_msg">카카오톡 연동에 문제가 발생했습니다.</string>
    <string name="adapter_not_initialized_error_msg">Adapter is not initialized</string>
    <string name="manager_not_initialized_error_msg">Billing Manager is not initialized</string>
    <string name="view_type_error_msg">Unknown View Type : %d</string>
    <string name="add_plus">+%s</string>
    <string name="add_minus">-%s</string>
    <string name="add_quotation">\"%s\"</string>
    <string name="notice">안내</string>
    <string name="okay">확인</string>
    <string name="next">다음</string>
    <string name="save">저장</string>
    <string name="internet_connect_error">인터넷 연결을 확인해주세요</string>
    <string name="default_notification_channel_id">default_messaging_channel</string>
    <string name="menu_tv_home">홈</string>
    <string name="menu_tv_profile">마이페이지</string>
    <string name="home_btn_sell">판매하기</string>
    <string name="ex_item_title">퓨어 오일 퍼퓸 10 ml 긴제목테스트트트트트</string>
    <string name="ex_item_real_price"><strike>54,000</strike></string>
    <string name="ex_item_now_price">48,900</string>
    <string name="ex_item_like">999+</string>
    <string name="detail_chips_category">카테고리</string>
    <string name="detail_chips_option">선택옵션 존재</string>
    <string name="detail_chips_imminent">마감 임박</string>
    <string name="detail_tv_percent">%</string>
    <string name="detail_tv_stock">남은 재고</string>
    <string name="detail_tv_stock_unit">개</string>
    <string name="detail_btn_detail_view"><u>이 상품에 대한 자세한 정보를 보고 싶다면?</u></string>
    <string name="detail_btn_purchase">구매하기</string>
    <string name="option_tv_title">원하는 옵션을 선택해주세요</string>
    <string name="option_tv_guide">*각인 옵션은 사용할 수 없습니다.</string>
    <string name="buy_confirm_tv_title">구매하기</string>
    <string name="pay_method_card">신용/체크카드</string>
    <string name="pay_method_naver">네이버페이</string>
    <string name="pay_method_kakao">카카오페이</string>
    <string name="pay_method_samsung">삼성페이</string>
    <string name="pay_method_trans">계좌이체</string>
    <string name="pay_method_phone">휴대폰 결제</string>
    <string name="push_tv_title">푸시 알림이\n설정되어 있지 않아요!</string>
    <string name="push_tv_subtitle">원만한 거래를 위해서는\n푸시알림 설정이 필요해요</string>
    <string name="push_btn_later">나중에 받을게요</string>
    <string name="push_btn_alarm">알림받기</string>
    <string name="buy_finished_tv_title">주문 완료</string>
    <string name="buy_finished_tv_message">주문 완료되었습니다</string>
    <string name="buy_finished_tv_message_sub">주문 확인 후 거래가 진행됩니다.</string>
    <string name="buy_finished_tv_delivery_title">배송지</string>
    <string name="buy_finished_tv_transaction_title">거래 정보</string>
    <string name="buy_finished_tv_transaction_method">결제 수단</string>
    <string name="buy_finished_tv_transaction_date">결제 일자</string>
    <string name="buy_finished_tv_pay_title">결제 정보</string>
    <string name="buy_finished_tv_pay_money">상품 금액</string>
    <string name="buy_finished_tv_pay_discount">할인가</string>
    <string name="buy_finished_tv_pay_charge">수수료</string>
    <string name="buy_finished_tv_pay_total">최종 결제 금액</string>
    <string name="buy_finished_btn_keep_shopping">계속 쇼핑하기</string>
    <string name="buy_finished_btn_show_detail">상세 내역 보러가기</string>
    <string name="transaction_id">거래 번호 %s</string>
    <string name="address_short_format">(%s) %s</string>
    <string name="address_format">(%s) %s %s</string>
    <string name="buy_info_tv_title">구매 상세</string>
    <string name="buy_info_tv_product_title">상품 정보</string>
    <string name="buy_info_tv_seller_title">판매자 정보</string>
    <string name="buy_info_tv_nickname">닉네임</string>
    <string name="buy_info_tv_delivery_title">배송지 정보</string>
    <string name="buy_info_msg_placed">주문 완료</string>
    <string name="buy_info_msg_shipping">배송중</string>
    <string name="buy_info_msg_completed">거래 완료</string>
    <string name="buy_info_msg_cancelled">거래 취소</string>
    <string name="buy_info_btn_fix">구매 확정하기</string>
    <string name="buy_info_btn_completed">거래가 완료된 상품입니다.</string>
    <string name="buy_info_btn_cancelled">거래가 취소된 상품입니다.</string>
    <string name="buy_order_error_msg">오류가 발생했습니다. 고객센터로 문의해주세요.</string>
    <string name="buy_order_fix_msg">구매 확정을 완료했습니다.</string>
    <string name="search_tv_hint">검색어를 입력하세요</string>
    <string name="search_tv_word_title">인기 검색어</string>
    <string name="search_tv_recent_title">최근 본 상품</string>
    <string name="search_tv_searched_text">검색 결과</string>
    <string name="search_recent_empty">최근 본 상품이 없어요</string>
    <string name="search_result_empty">검색된 상품이 없어요</string>
    <string name="profile_btn_login">회원가입 / 로그인</string>
    <string name="profile_btn_benefit"><u>회원가입 시 혜택 보기</u></string>
    <string name="profile_tv_center_title">고객 센터</string>
    <string name="profile_btn_center_question">자주 묻는 질문</string>
    <string name="profile_btn_center_one_on_one">1:1 상담 센터</string>
    <string name="profile_tv_info_header">반가워요,</string>
    <string name="profile_tv_info_footer">님</string>
    <string name="profile_tv_history_title">히스토리</string>
    <string name="profile_btn_history_purchase">구매 내역</string>
    <string name="profile_btn_history_sell">판매 내역</string>
    <string name="profile_btn_history_like">내 관심</string>
    <string name="setting_tv_title">정보 관리</string>
    <string name="setting_tv_info_title">내 정보</string>
    <string name="setting_tv_info_name">이름</string>
    <string name="setting_tv_info_phone">휴대폰 번호</string>
    <string name="setting_tv_info_nickname">닉네임</string>
    <string name="setting_tv_manage_title">내 정보 관리</string>
    <string name="setting_tv_manage_delivery">배송지 관리</string>
    <string name="setting_tv_manage_bank">계좌 관리</string>
    <string name="setting_tv_manage_account">계정 관리</string>
    <string name="setting_tv_term_title">약관</string>
    <string name="setting_btn_term_private">개인정보 처리방침</string>
    <string name="setting_btn_term_service">이용약관</string>
    <string name="setting_btn_logout">로그아웃</string>
    <string name="setting_btn_quit">회원 탈퇴</string>
    <string name="setting_btn_add">+ 등록</string>
    <string name="address_tv_title">배송지 등록</string>
    <string name="address_tv_zipcode_title">우편번호</string>
    <string name="address_btn_find_address">우편번호 찾기</string>
    <string name="address_tv_delivery_title">주소지</string>
    <string name="address_tv_address_hint">주소지를 입력해주세요</string>
    <string name="address_tv_address_plus_title">상세주소</string>
    <string name="address_tv_address_plus_hint">상세주소를 입력해주세요</string>
    <string name="address_tv_name_hint">이름를 입력해주세요</string>
    <string name="address_tv_phone_hint">휴대폰 번호를 입력해주세요</string>
    <string name="address_btn_confirm">입력 완료</string>
    <string name="address_toast">배송지 입력이 완료되었습니다</string>
    <string name="address_delete_toast">배송지가 삭제되었습니다</string>
    <string name="btn_mod">수정</string>
    <string name="btn_delete">삭제</string>
    <string name="confirm_tv_product_title">상품 정보</string>
    <string name="confirm_tv_delivery_title">배송지</string>
    <string name="confirm_btn_change">변경</string>
    <string name="confirm_tv_pay_title">결제 수단</string>
    <string name="confirm_tv_price_title">결제 금액</string>
    <string name="confirm_tv_price_money_title">상품 금액</string>
    <string name="confirm_tv_price_discount_title">할인가</string>
    <string name="confirm_tv_price_charge_title">수수료</string>
    <string name="confirm_tv_price_total_title">결제 금액</string>
    <string name="confirm_btn_term_all">아래 약관에 전체동의해요</string>
    <string name="confirm_term_tv_first">서비스 이용 약관 (필수)</string>
    <string name="confirm_term_tv_second">딴지 구매 가이드 (필수)</string>
    <string name="confirm_term_tv_third">딴지 판매 가이드 (필수)</string>
    <string name="confirm_tv_sell_title">판매하기</string>
    <string name="confirm_tv_product_name">상품명</string>
    <string name="confirm_tv_kakao_price">카카오톡 선물하기 가격</string>
    <string name="confirm_tv_price">판매 가격</string>
    <string name="confirm_tv_sell_date">받은 날짜</string>
    <string name="confirm_tv_sell_date_subtitle">배송지 입력 기간 이내의 상품만 등록 가능합니다.</string>
    <string name="confirm_tv_date_hint">클릭해서 날짜를 선택하세요</string>
    <string name="sell_product_tv_subtitle">해당 상품이 맞나요?</string>
    <string name="sell_product_btn_submit">네 맞아요</string>
    <string name="sell_product_pick_again"><u>다시 업로드하기</u></string>
    <string name="sell_product_picker_error">갤러리 이미지를 가져오는 과정에서 오류가 발생했습니다.</string>
    <string name="sell_finished_tv_title">상품 등록 완료</string>
    <string name="sell_finished_tv_message">상품 등록이 완료되었습니다.</string>
    <string name="sell_finished_tv_message_sub">주문 확인 후 거래가 진행됩니다.\n거래가 성사되면 판매를 확정해주세요.</string>
    <string name="sell_finished_btn_product_detail">상품 등록 확인</string>
    <string name="sell_finished_btn_sell_more">상품 추가 등록</string>
    <string name="sell_info_tv_title">판매 상세</string>
    <string name="sell_info_tv_message">입금 완료</string>
    <string name="sell_info_tv_buyer_title">구매자 정보</string>
    <string name="sell_info_tv_pay_title">판매 정보</string>
    <string name="sell_info_tv_pay_kakao_title">카카오톡 선물하기 가격</string>
    <string name="sell_info_tv_pay_real_title">판매가</string>
    <string name="sell_info_btn_fix_sell">판매 확정하기</string>
    <string name="sell_info_tv_pay_total">최종 판매 금액</string>
    <string name="sell_info_msg_on_sale">판매 중</string>
    <string name="sell_info_msg_ordered">입금 완료</string>
    <string name="sell_info_btn_fix">판매 확정하기</string>
    <string name="sell_info_btn_shipping">배송 중인 상품입니다.</string>
    <string name="sell_confirm_tv_title">판매 확정</string>
    <string name="sell_confirm_tv_subtitle">카카오톡으로 이동해서\n배송지를 입력해주세요!</string>
    <string name="sell_confirm_btn_guide"><u>가이드 보러가기</u></string>
    <string name="sell_confirm_tv_buyer">구매자 정보</string>
    <string name="sell_confirm_tv_option">선택 옵션</string>
    <string name="sell_confirm_btn_copy">복사</string>
    <string name="sell_order_fix_msg">판매 확정을 완료했습니다.</string>
    <string name="sign_up_tv_title">본인 인증을\n진행해주세요</string>
    <string name="sign_up_tv_subtitle">본인 명의의 휴대폰 번호로 인증을 진행해주세요</string>
    <string name="sign_up_tv_name">이름</string>
    <string name="sign_up_tv_name_hint">예시: 홍길동</string>
    <string name="sign_up_tv_birth">생년월일</string>
    <string name="sign_up_tv_birth_front_hint">예시: 900101</string>
    <string name="sign_up_tv_birth_mid">-</string>
    <string name="sign_up_tv_birth_secret">●\u00A0\u00A0●\u00A0\u00A0●\u00A0\u00A0●\u00A0\u00A0●\u00A0\u00A0●</string>
    <string name="sign_up_tv_mobile">통신사</string>
    <string name="sign_up_tv_mobile_hint">선택해주세요</string>
    <string name="sign_up_tv_phone">휴대폰 번호</string>
    <string name="sign_up_tv_phone_hint">- 없이 숫자만 입력해주세요</string>
    <string name="sign_up_btn_phone_certify">인증요청</string>
    <string name="sign_up_tv_code">인증번호</string>
    <string name="sign_up_tv_code_hint">인증번호 6자리를 입력해주세요</string>
    <string name="sign_up_btn_confirm">확인</string>
    <string name="sign_up_mobile_tv_title">통신사 선택</string>
    <string name="bank_add_tv_title">계좌 등록</string>
    <string name="bank_add_tv_where_title">은행</string>
    <string name="bank_add_tv_where_hint">은행을 입력해주세요</string>
    <string name="bank_add_tv_number_title">계좌번호</string>
    <string name="bank_add_tv_number_hint">-를 제외한 계좌번호를 작성해주세요</string>
</resources>