<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="co.orange.presentation.bank.add.BankAddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:padding="12dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_add_bank_title"
            style="@style/TextAppearance.DDanzi.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/bank_add_tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_back" />

        <View
            android:id="@+id/border_add_bank"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_add_bank_title" />

        <TextView
            android:id="@+id/tv_add_bank_owner_name_title"
            style="@style/TextAppearance.DDanzi.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="21dp"
            android:text="@string/setting_tv_info_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/border_add_bank" />

        <TextView
            android:id="@+id/tv_add_bank_owner_name"
            style="@style/TextAppearance.DDanzi.Body4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:text="@={vm.ownerName}"
            android:textColor="@color/gray_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_add_bank_owner_name_title"
            tools:text="김*호" />

        <View
            android:id="@+id/border_add_bank_owner_name"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="9dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_add_bank_owner_name" />

        <TextView
            android:id="@+id/tv_add_bank_name_title"
            style="@style/TextAppearance.DDanzi.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="21dp"
            android:text="@string/bank_add_tv_where_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/border_add_bank_owner_name" />

        <LinearLayout
            android:id="@+id/layout_add_bank_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_add_bank_name_title">

            <TextView
                android:id="@+id/tv_add_bank_name_hint"
                style="@style/TextAppearance.DDanzi.Body4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bank_add_tv_where_hint"
                android:textColor="@color/gray_2"
                android:visibility="@{vm.isBankSelected ? View.GONE : View.VISIBLE}" />

            <TextView
                android:id="@+id/tv_add_bank_name"
                style="@style/TextAppearance.DDanzi.Body4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.bankName}"
                android:textColor="@color/gray_3"
                android:visibility="@{vm.isBankSelected ? View.VISIBLE : View.GONE}"
                tools:visibility="gone" />

        </LinearLayout>

        <View
            android:id="@+id/border_add_bank_name"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="9dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_add_bank_name" />

        <TextView
            android:id="@+id/tv_add_bank_number_title"
            style="@style/TextAppearance.DDanzi.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="21dp"
            android:text="@string/bank_add_tv_number_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/border_add_bank_name" />

        <EditText
            android:id="@+id/et_add_bank_number"
            style="@style/TextAppearance.DDanzi.Body4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:afterTextChanged="@{() -> vm.checkIsCompleted()}"
            android:background="@color/transparent"
            android:hint="@string/bank_add_tv_number_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:paddingStart="1dp"
            android:text="@={vm.accountNumber}"
            android:textColor="@color/gray_3"
            android:textColorHint="@color/gray_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_add_bank_number_title" />

        <View
            android:id="@+id/border_add_bank_number"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="9dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_add_bank_number" />

        <TextView
            android:id="@+id/btn_confirm"
            style="@style/TextAppearance.DDanzi.Body3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/sel_btn"
            android:enabled="@{vm.isCompleted}"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:text="@string/address_btn_confirm"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>